<resources>
    <string name="app_name">GrainChainChallenge</string>

    <!--Maps-->
    <string name="btn_Save">Grabar ruta</string>
    <string name="btn_Stop">Detener y Guardar ruta</string>
    <string name="label_routes">Tus Rutas Guardadas</string>

    <!--AlertPermisson-->
    <string name="title_alert">Aviso</string>
    <string name="description_alert">Es necesario que se habilite los permisos de ubicación para el correcto funcionamiento de este aplicativo</string>
    <string name="enable_button">Habilitar permisos</string>

    <!--AlertGPS-->
    <string name="title_gps">Aviso</string>
    <string name="description_gps">Es necesario encender el GPS para poder usar el aplicativo</string>
    <string name="enable_gps">Ir a GPS</string>

    <!--DialogSaveName-->
    <string name="question_dialog">¿Con que nombre quieres guardar esta ruta?</string>
    <string name="save_button_dialog">Guardar ruta</string>
    <string name="cancel_button_dialog">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--DialogSaveName-->
    <string name="label_name">Nombre</string>
    <string name="label_distance">Distancia</string>
    <string name="label_time">Tiempo</string>
    <string name="btn_share">Compartir</string>


</resources>